// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mam schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'DeviceClass'
    Path:     MAM.schema.json#/required
  must have required property 'DeviceManual'
    Path:     MAM.schema.json#/required
  must have required property 'DeviceRevision'
    Path:     MAM.schema.json#/required
  must have required property 'HardwareRevision'
    Path:     MAM.schema.json#/required
  must have required property 'Manufacturer'
    Path:     MAM.schema.json#/required
  must have required property 'ManufacturerUri'
    Path:     MAM.schema.json#/required
  must have required property 'Model'
    Path:     MAM.schema.json#/required
  must have required property 'ProductCode'
    Path:     MAM.schema.json#/required
  must have required property 'ProductInstanceUri'
    Path:     MAM.schema.json#/required
  must have required property 'RevisionCounter'
    Path:     MAM.schema.json#/required
  must have required property 'SerialNumber'
    Path:     MAM.schema.json#/required
  must have required property 'SoftwareRevision'
    Path:     MAM.schema.json#/required
"
`;

exports[`mam schema (1) match fails for invalid config -> null values: null values 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Description must be object
    Received: <null>
    Path:     MAM.schema.json#/type
  /DeviceClass must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/DeviceClass/type
  /DeviceManual must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/DeviceManual/type
  /DeviceRevision must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/DeviceRevision/type
  /HardwareRevision must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/HardwareRevision/type
  /Manufacturer/Locale must be string
    Received: <null>
    Path:     MAM.schema.jsonconstants/locale.pattern.schema.json/type
  /Manufacturer/Text must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/Text/type
  /ManufacturerUri must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/ManufacturerUri/type
  /Model/Locale must be string
    Received: <null>
    Path:     MAM.schema.jsonconstants/locale.pattern.schema.json/type
  /Model/Text must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/Text/type
  /ProductCode must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/ProductCode/type
  /ProductInstanceUri must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/ProductInstanceUri/type
  /RevisionCounter must be >= -2147483648
    Received: <number> -2147483649
    Path:     MAM.schema.jsondataTypes/int32.schema.json/minimum
  /SerialNumber must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/SerialNumber/type
  /SoftwareRevision must be string
    Received: <null>
    Path:     MAM.schema.json#/properties/SoftwareRevision/type
"
`;

exports[`mam schema (2) match fails for invalid config -> invalid property Foobar: invalid property Foobar 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'Foobar'
    Expected: <boolean> false
    Path:     MAM.schema.json#/additionalProperties
  /RevisionCounter must be <= 2147483647
    Received: <number> 2147483648
    Path:     MAM.schema.jsondataTypes/int32.schema.json/maximum
"
`;

exports[`mam schema (3) match fails for invalid config -> revision counter exceeds int32: revision counter exceeds int32 1`] = `
"expect(received).toMatchSchema(schema)

received
  /RevisionCounter must be <= 2147483647
    Received: <number> 2147483648
    Path:     MAM.schema.jsondataTypes/int32.schema.json/maximum
"
`;
